# zero2prod

./: .env  Cargo.toml  Dockerfile  README.md  README_CN.md  configuration.yml  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 20230827153253_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: health_check.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: post.rs
src/routes/home/: mod.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
